<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/MyNanoDegTitle"
            android:text="@string/my_nanodegree_apps" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    style="@style/MyAppButtons"
                    android:text="@string/app_1" />

                <Button
                    style="@style/MyAppButtons"
                    android:text="@string/app_2" />

                <Button
                    style="@style/MyAppButtons"
                    android:text="@string/app_3" />

                <Button
                    style="@style/MyAppButtons"
                    android:text="@string/app_4" />

                <Button
                    style="@style/MyAppButtons"
                    android:text="@string/app_5" />

                <Button
                    style="@style/CapstoneAppButton"
                    android:text="@string/app_6"
                    android:textColor="@color/text_primary_inverse" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>
